# Expense-Tracker

./: .gitignore  ExpenseReport  MANIFEST.in  README.md  category.py  constants.py  csv_operations.py  db_init.py  debug_streamlit.py  expense.py  logs.py  main.py  parser.py  payment.py  pyproject.toml  reporting.py  requirements.txt  run_expense_tracker.bat  setup.py  sql_queries.py  streamlit_app.py  streamlit_cloud.py  user.py
.streamlit/: config.toml
expense_tracker/: __init__.py  cloud_config.py
expense_tracker/config/: __init__.py  constants.py
expense_tracker/core/: __init__.py  category.py  expense.py  payment.py  reporting.py  user.py
expense_tracker/database/: ExpenseReport  __init__.py  connection.py  db_init.py  sql_queries.py
expense_tracker/static/templates/: import_expenses_template.csv
expense_tracker/tests/: test_cases.py
expense_tracker/utils/: __init__.py  csv_operations.py  logs.py  parser.py
expense_tracker/web/: __init__.py  app.py
expense_tracker/web/pages/: __init__.py  advanced_reports.py  basic_reports.py  category_management.py  import_export.py  manage_expenses.py  payment_management.py  system_logs.py  user_management.py
pages/: advanced_reports.py  basic_reports.py  category_management.py  import_export.py  manage_expenses.py  payment_management.py  system_logs.py  user_management.py
